--- a/public/fallback.html
+++ b/public/fallback.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <p>this page cannot be viewed offline :(</p>
+        <p>you're offline :( come back later!</p>
     </main>
 
 </body>
