--- a/public/fallback.html
+++ b/public/fallback.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, viewport-fit=cover">
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" href="/res/icons/32.png">
     <link rel="stylesheet" href="/css/global.css">
