--- a/public/fallback.html
+++ b/public/fallback.html
@@ -24,9 +24,11 @@
         <a href="/posts" class="index-button">i</a>
     </header>
 
-    <main>
-        <p>you're offline :( come back later!</p>
-    </main>
+    <div class="scroll-container">
+        <main>
+            <p>you're offline :( come back later!</p>
+        </main>
+    </div>
 
 </body>
 </html>
